api-gateway/demo-manifests.yaml
---
# route-key used in path
apiVersion: apigatewayv2.services.k8s.aws/v1alpha1
kind: Route
metadata:
  name: "ack-route-vpclink"
  namespace: ack-demo
spec:
  apiRef:
    from:
      name: "ack-api"
  routeKey: "ANY /{proxy+}"
  targetRef:
    from:
      name: "vpc-integration"
