api-gateway/test.yaml
---
# route-key used in path
apiVersion: apigatewayv2.services.k8s.aws/v1alpha1
kind: Route
metadata:
  name: "ack-route-vpclink"
  namespace: components
spec:
  apiRef:
    from:
      name: "canvas-api-gateay"
  routeKey: "ANY /{proxy+}"
  targetRef:
    from:
      name: "vpc-integration"
